correct overlapping classes

--- a/jekyll/css/custom.css
+++ b/jekyll/css/custom.css
@@ -2,7 +2,7 @@ body {
     background-color: #FAFAFA
 }
 
-div.content {
+div.main-content {
     max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
